--- a/style.css
+++ b/style.css
@@ -1,3 +1,164 @@
-*{
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Desktop sizes ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Body ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+body{
+	text-align: center;
+	overflow: hidden;
+	cursor: url("http://downloads.totallyfreecursors.com/cursor_files/magicwand2.ani"), url("http://downloads.totallyfreecursors.com/thumbnails/magicwand2.gif"), auto;
+}
+
+a{
+	cursor: url('Compass.png'), default;
+}
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Navigation Aside ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+aside{
+	width: 15vw;
+	position: fixed;
+	left: 0;
+	height: 100vh;
+	text-align: center;
+	z-index: 1;
+}
+
+.nav-pc{
+	margin-left: -10px;
+	height: 100%;
+	list-style: none;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	opacity: 0.7;
+	transition: .3s;
+	cursor: url('Compass.png'), default;
+}
+
+body:hover .nav-pc{
+	opacity: 1;
+}
+
+/* https://codepen.io/ming/pen/YwGbwV */
+.nav-pc li{
+	padding: 5px;
+	cursor: url('Compass.png'), default;;
+	margin: 30px;
+	transition: .3s;
+	width: 1.0em;
+	height: 1.0em;
+	border-top: 1px solid #fff;
+	box-sizing: border-box;
+	border: 2px solid #fff;
+	transition: .3s;
+	transform: rotate(135deg);
+}
+
+.nav-pc li:hover {
+	background-color: rgba(255,0,0,.4);
+	transform: rotate(0deg);
+}
+
+.nav-pc li:nth-child(even):hover{
+	transform: rotate(0deg);
+}
+
+.nav-pc .selected {
+	transform: rotate(0deg);
+	background-color: white;
+}
+
+
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Intro subsection ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+#intro{
+	background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('intro.jpg') fixed;
 
 }
+
+.subContainer{
+	margin: auto;
+	width: 20%;
+	height: auto;
+	text-align: center;
+}
+
+
+.subContainer img{
+	width: calc(7vw + 100px);
+	padding-top: 1%;
+	filter: brightness(80%);
+	transition: .3s;
+}
+
+.subContainer img:hover{
+	filter: brightness(100%);
+}
+
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Scroll ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+.scrollto{
+  position: absolute;
+  display: inline-block;
+	width: 50px;
+	text-align: center;
+	height: 45px;
+  border: 3px solid white;
+	padding-top: 5px;
+	transition: .3s;
+  margin: auto;
+  border-radius: 50%;
+	opacity: 0.5;
+	font-size: 35px;
+	animation: animateScrollButton 5s ease-out infinite;
+	user-select: none;
+	cursor: url('Compass.png'), default;
+}
+
+@keyframes animateScrollButton{
+	0%{transform: rotateY(0deg)}
+	80%{transform: rotateY(0deg); opacity: 0.5;}
+	90%{transform: rotateY(180deg); opacity:1;}
+	100%{transform: rotateY(0deg); opacity: 0.5;}
+}
+
+.scrollto:hover{
+	opacity: 1;
+	transform: rotateY(0deg);
+	animation: none;
+}
+
+.up{
+  top: 30px;
+  right: 2.5%;
+}
+
+
+.down{
+  bottom: 30px;
+  right: 2.5%;
+}
+
+
+
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Ball ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+  .bubble{
+    position: absolute;
+    width: 15px;
+    height: 15px;
+		animation: boxAnimation .5s ease-in-out infinite;
+		animation-fill-mode: both;
+		opacity: 1;
+    border-radius: 50%;
+		z-index: -1;
+  }
+
+	@keyframes boxAnimation{
+		50%{transform: rotateY(180deg)}
+		100%{transform: rotateY(360deg)}
+	}
