Compass changed to compass

--- a/common.css
+++ b/common.css
@@ -4,6 +4,14 @@
 	font-family: sans-serif;
 }
 
+/* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Loader ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
+
+.loader{
+  position: fixed;
+  
+}
+
+
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Main Container ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
