--- a/common.css
+++ b/common.css
@@ -8,7 +8,17 @@
 
 .loader{
   position: fixed;
-  
+  width: 100%;
+  height: 100%;
+  background: white;
+  top: 0;
+  left: 0;
+  z-index: 100;
+}
+
+.loadText{
+  font-size: 50px;
+  margin-top: 45vh;
 }
 
 
