--- a/common.css
+++ b/common.css
@@ -25,19 +25,18 @@
 
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Main Container ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
-main .container {
+main .container-fluid {
 	height: 100vh;
-	color: white;
 	z-index: 0;
 	position: relative;
 }
 
-main .container:nth-child(odd){
-	background: linear-gradient(to bottom, #0eb8ae 0%, #1fc8db 50%, #2cb5e8 100%);
+main .container-fluid:nth-child(odd){
+	background: linear-gradient(to bottom, white 0%, lightgrey 50%, white 100%);
 }
 
-main .container:nth-child(even){
-	background: linear-gradient(to bottom, #2cb5e8 0%, #1fc8db 50%, #0eb8ae 100%);
+main .container-fluid:nth-child(even){
+	background: linear-gradient(to bottom, white 0%, lightgrey 50%, white 100%);
 }
 
 
@@ -45,12 +44,12 @@ main .container:nth-child(even){
 /* ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ Headings ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ */
 
 .mainHeading{
-	padding-top: 5%;
+	padding-top: 2%;
 	font-size: calc(2.5vw + 15px);
 	font-family: Papyrus, fantasy;
 }
 
 .subHeading{
-	margin-top: 7%;
+	margin-top: 3%;
 	font-size: calc(1.5vw + 15px);
 }
